# Orac

./: .bumpversion.cfg  .gitattributes  .gitignore  AGENTS.md  LICENSE  MANIFEST.in  README.md  architecture-qa-results.md  architecture-qa-update1.md  defaultdomains.xml  dvoices.sh  log  plugin_remainder.md  procs.txt  provision_orac_admin_apex_acl.sql  pyproject.toml  pyvenv.cfg  requirements.txt  setup.ps1  setup.sh  tvoices.sh
.clinerules/: 000-self-improvement.md  005-memory-bank.md  010-ddl-maintenance.yaml  010-python-code.md
0a/5f2b754eaa/: metadata.json
0f/893db68cb0/: metadata.json
19/93f319aaa6/: metadata.json
23/0a76ca751b/: metadata.json
38/1020fd1742/: metadata.json
4a/a158b6e933/: metadata.json
77/5a08d92ff8/: metadata.json
79/8074dd2ec8/: metadata.json
87/590100d367/: metadata.json
a0/651252f165/: metadata.json
a5/b9e0dbf131/: metadata.json
assets/images/: actress-lauren-bacall-dies-at-89.html
ba/6e8a5a52ee/: metadata.json
d1/65094dc470/: metadata.json
d6/0acd017486/: metadata.json
df/7e37b01d88/: metadata.json
docs/: README.md  TODO.md  aec-design.md  apex-administration.md  backup-restore.md  configuration.md  database-liquibase-deployment.md  dialogue-routing.md  docker-compose-deployment.md  gui-defect-plan-of-attack.md  home-assistant-data-lifecycle.md  home-assistant.md  installation.md  orac-atom-display.md  plugin-audit-db-api-design.md  plugin-audit-persistence.md  plugin-execution-boundaries.md  plugins.md  preference-lov-metadata-plan.md  rag-usage-privileges.md  retrieval.md  user_preferences.md  user_prefs_validation.md  voice-pipeline.md  voice-turn-lifecycle.md
docs/agent-guardrails/: 00-project-principles.md  10-architecture-boundaries.md  20-database-standards.md  25-plsql-standards.md  27-liquibase-annotations.md  28-apex-standards.md  30-python-standards.md  35-frontend-nextjs-standards.md  35-frontend-vite-react-standards.md  40-bash-scripting.md  45-ai-generated-code-reviewability.md  50-plugin-standards.md  55-plugin-execution-boundaries.md  60-security-and-risk.md  70-context-management.md  70-git-workflow.md  table-abbreviations.csv
docs/backlog/: API-keys.md
docs/pending_work/: TODO.md
e9/faf8e4f218/: metadata.json
ec/fb7dc5ce95/: metadata.json
f0/45acdbcd5a/: metadata.json
f0/a110827736/: metadata.json
f4/ccdfc544a6/: metadata.json
memory-bank/: projectBrief.md  projectRules.md  systemPatterns.md
orac_voice/: __init__.py
plugins/: README.md  drop_box.json  home_assistant.ini  home_assistant.json  media_control.json  weather.json
plugins/_template/: README.md  plugin.py
plugins/drop_box/: .bumpversion.cfg  README.md  __init__.py  models.py  plugin.py  repository.py  scanner.py  service.py
plugins/home_assistant/: .bumpversion.cfg  README.md  client.py  color_description.py  control.py  (+13 more)
protocol/: README.md  pyproject.toml
protocol/orac_protocol/: __init__.py  validator.py
protocol/orac_protocol/resources/json_schema/: protocol.schema.json
scripts/: check_core_liquibase.py  check_guardrails.py  check_searxng_retrieval.py
tests/: test_check_core_liquibase.py  test_check_guardrails.py  test_check_searxng_retrieval.py  test_configuration_docs.py  test_core_db_deploy_script.py  test_date_reasoning.py  test_dialogue_routing.py  test_display_browser_transport.py  test_display_event_pipe.py  test_drop_box_repository.py  test_drop_box_scanner.py  test_drop_box_schema.py  test_drop_box_service.py  test_home_assistant_client.py  test_home_assistant_control.py  test_home_assistant_light_control.py  test_home_assistant_light_state_query.py  test_home_assistant_plugin.py  test_home_assistant_repository.py  test_home_assistant_sensor_query.py  test_home_assistant_service.py  test_home_assistant_sync.py  test_knowledge_capture.py  test_knowledge_fixtures.py  test_knowledge_grounding.py  test_knowledge_retrieval.py  test_knowledge_schema.py  test_knowledge_scope.py  test_knowledge_worker.py  test_llm_connector.py  test_logutil.py  test_model_generation_presets_schema.py  test_model_generation_resolver.py  test_network_logging.py  test_orac_backup_recovery_scripts.py  test_orac_context_history.py  test_orac_ctl_compose.py  test_orac_liquibase_setup_script.py  test_orac_plugin_cli.py  test_orac_plugin_integration.py  (+31 more)
utils/: build-e.ps1  build-e.sh  build.ps1  build.sh  bump_major.sh  bump_minor.sh  bump_patch.sh  code_lines.sh  dos2unix.sh  freeze.ps1  freeze.sh  init-orac.sh  install-e.sh  package.sh  split_ddl (original).py  split_ddl.ps1  split_ddl.py  tree.sh  utils.env  utils.env.ps1  utils.ps1
web/: AGENTS.md  AGENT_CONTEXT.md
(+1638 files in other folders)
