[project]
name = "orac"
version = "0.1.0"
description = "Your project description"
authors = [{name = "Clive Bostock"}]
requires-python = ">=3.12,<4.0"
dependencies = [
  "orac-protocol @ git+https://github.com/avalon60/Orac.git@protocol/v1.0.0#subdirectory=protocol",
  "piper-tts (>=1.4.2,<2.0.0)",
  "sounddevice (>=0.5.5,<0.6.0)",
  "numpy (>=2.2.6,<2.4)",
  "faster-whisper (>=1.2.1,<2.0.0)",
  "pydantic (>=2.13.3,<3.0.0)",
  "requests (>=2.33.1,<3.0.0)",
  "loguru (>=0.7.3,<0.8.0)",
  "langchain-openai (>=1.2.1,<2.0.0)",
  "oracledb (>=4.0.0,<5.0.0)",
  "cryptography (>=47.0.0,<48.0.0)",
  "customtkinter (>=5.2.2,<6.0.0)",
  "pytest (>=9.0.3,<10.0.0)",
  "packaging (>=24.0,<27.0)",
  "platypush-speexdsp-ns (>=0.1.2,<0.2.0)"
]

[project.optional-dependencies]
voice-wake = [
  "platypush-openwakeword (>=0.6.1,<0.7.0)"
]
voice-wake-openwakeword = [
  "platypush-openwakeword (>=0.6.1,<0.7.0)"
]
voice-wake-porcupine = [
  "pvporcupine (>=4.0.2,<5.0.0)",
  "pvrecorder (>=1.2.7,<2.0.0)"
]
voice-aec-livekit = [
  "livekit (>=1.1.8,<2.0.0)"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

# Specify the package directory
[tool.setuptools.packages.find]
where = ["src"]

# Additional metadata that may be required for pip to correctly identify the package
[tool.setuptools.package-data]
"orac" = ["**/*.py"]  # Make sure the Python files are included in the package

[dependency-groups]
dev = [
    "black (>=26.5.1,<27.0.0)",
    "bump2version (>=1.0.1,<2.0.0)",
    "mypy (>=1.17.1,<2.0.0)",
    "ruff (>=0.15.20,<0.16.0)"
]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
explicit_package_bases = true
files = [
    "src/orac_core/dialogue_routing/__init__.py",
    "src/orac_core/dialogue_routing/models.py",
    "src/orac_core/dialogue_routing/service.py",
    "src/orac_core/knowledge/__init__.py",
    "src/orac_core/knowledge/grounding.py",
    "src/orac_core/knowledge/models.py",
    "src/orac_core/knowledge/repository.py",
    "src/orac_core/knowledge/retrieval.py",
    "src/orac_core/knowledge/scope.py",
]
follow_imports = "skip"
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_ignores = true
